# FoxPuppet

./: .gitconfig  .gitignore  .pyup.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PULL_REQUEST_TEMPLATE.md  Pipfile  README.md  README.rst  __init__.py  decorators.py  foxpuppet.py  geckodriver.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/actions/setup_firefox/: index.js
.github/workflows/: foxpuppet_deploy.yml  linux_tests.yml
api/: windows.py
api/browser/: window.py
docs/: Makefile  api.rst  conf.py  development.rst  index.rst  installing.rst  news.rst  user_guide.rst
foxpuppet/: __init__.py  decorators.py  expected.py  foxpuppet.py  region.py  windows.py
foxpuppet/api/: windows.py
foxpuppet/api/browser/: window.py
foxpuppet/browser/: base_window.py  navbar.py  tabbar.py  window.py  windows.py
foxpuppet/tests/: conftest.py  test_browser_model.py  test_open_tab.py
foxpuppet/ui/: base_window.py  windows.py
foxpuppet/ui/browser/: __init__.py  navbar.py  tabbar.py  window.py
foxpuppet/windows/: __init__.py  base.py  browser.py  manager.py  window_manager.py
foxpuppet/windows/browser/: __init__.py  navbar.py  tab.py  tab_bar.py  tabbar.py  urlbar.py  window.py
foxpuppet/windows/browser/bookmarks/: __init__.py  bookmark.py
foxpuppet/windows/browser/notifications/: __init__.py  addons.py  base.py
foxpuppet/windows/browser/panel_ui/: __init__.py  panel_ui.py
requirements/: flake8.txt  tests.txt
tests/: __init__.py  conftest.py  test_bookmarks.py  test_browser_model.py  test_new_window_handle.py  test_notifications.py  test_panel_ui.py  webserver.py
tests/web/: corruptwebextension.xpi  webextension.xpi
