[tool.poetry]
name = "foxpuppet"
version = "0.1.0"
description = ""
authors = ["Benjamin Forehand Jr <bforehand@mozilla.com>"]
license = "Mozilla Public License 2.0 (MPL 2.0)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
black = "^24.10.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.1.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-selenium = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
skip_gitignore = true
